[package]
name = "tr_processor"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0.58"
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"